Fixing body not fitting width on smaller displays.

--- a/output.css
+++ b/output.css
@@ -809,7 +809,6 @@ nav {
     width: 100vw;
     overflow-x: hidden;
     position: relative;
-    touch-action: none;
   }
   .intro {
     width: 100%;
@@ -826,7 +825,6 @@ nav {
   main {
     width: 100%;
     overflow-x: hidden;
-    touch-action: none;
   }
   .body-canvas {
     height: 100%;
