--- a/style.scss
+++ b/style.scss
@@ -820,7 +820,7 @@ nav{
     width: 100vw;
     overflow-x: hidden;
     position: relative;
-    touch-action: none;
+
   }
 
   .intro{
@@ -841,7 +841,6 @@ nav{
   main{
     width: 100%;
     overflow-x: hidden;
-    touch-action: none;
   }
 
   .body-canvas{
